Fix: background landing; navbar z-index

--- a/frontend/src/app/modules/landing/landing/landing.component.scss
+++ b/frontend/src/app/modules/landing/landing/landing.component.scss
@@ -4,7 +4,7 @@ body, html {
 }
 
 .landing_bg {
-  background-image: url("/assets/images/earth-1149733.jpg");
+  background-image: url("../../../../assets/images/earth-1149733.jpg");
   height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
